开始修改docker compose，做一个临时性的提交，测试从 vss_alpha ec2实例上通过源码编排镜像的可行性

--- a/.env.template
+++ b/.env.template
@@ -6,12 +6,13 @@
 # ----------------------------------------------------
 
 # --- Public Endpoint Configuration ---
-PUBLIC_ENDPOINT=http://localhost
+# IMPORTANT: This will be prompted for during setup. e.g., http://your-server-ip
+PUBLIC_ENDPOINT=
 
 # --- Django Core Settings ---
 DJANGO_SECRET_KEY=
 DJANGO_DEBUG=False
-DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1
+DJANGO_ALLOWED_HOSTS=
 
 # --- PostgreSQL Database Settings ---
 POSTGRES_DB=visify_ssw_db
@@ -22,9 +23,15 @@ POSTGRES_PASSWORD=
 CELERY_BROKER_URL=redis://redis:6379/0
 
 # --- Public Facing URLs (Derived from PUBLIC_ENDPOINT) ---
+# These are automatically derived from PUBLIC_ENDPOINT
 LABEL_STUDIO_PUBLIC_URL=${PUBLIC_ENDPOINT}:8081
 SUBEDITOR_PUBLIC_URL=${PUBLIC_ENDPOINT}:3000
 LOCAL_MEDIA_URL_BASE=${PUBLIC_ENDPOINT}:9999
+NUXT_PUBLIC_VSS_WORKBENCH_URL=${PUBLIC_ENDPOINT}:8000
+
+# --- CORS Settings ---
+# This is automatically derived from SUBEDITOR_PUBLIC_URL
+CORS_ALLOWED_ORIGINS=${SUBEDITOR_PUBLIC_URL}
 
 # --- Storage Backend ---
 STORAGE_BACKEND=local
