--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,7 +46,10 @@ services:
 
   # Django Web 应用主服务
   web:
-    image: tehgflpcjgsel0-ghcr.xuanyuan.run/weizhangcs/vss-workbench:v1.0.0
+    # 如果在国内的云环境或本地网进行测试部署，需要通过加速器
+    image: tehgflpcjgsel0-ghcr.xuanyuan.run/weizhangcs/vss-workbench:v2.0.3
+    # 如果在国外的云环境
+    # image: ghcr.io/weizhangcs/vss-workbench:v2.0.2
     container_name: vss-web
     command: python manage.py runserver 0.0.0.0:8000
     ports:
@@ -57,10 +60,16 @@ services:
     depends_on:
       - db
       - redis
+    volumes:
+      - ./media_root:/app/media_root
+      - staticfiles_volume:/app/staticfiles
 
   # Celery 异步任务处理服务
   celery_worker:
-    image: tehgflpcjgsel0-ghcr.xuanyuan.run/weizhangcs/vss-workbench:v1.0.0
+    # 如果在国内的云环境或本地网进行测试部署，需要通过加速器
+    image: tehgflpcjgsel0-ghcr.xuanyuan.run/weizhangcs/vss-workbench:v2.0.3
+    # 如果在国外的云环境
+    # image: ghcr.io/weizhangcs/vss-workbench:v2.0.2
     container_name: vss-celery-worker
     command: celery -A visify_ssw worker -l info
     # 复用 web 服务的 env_file 配置
@@ -68,6 +77,8 @@ services:
       - .env
     depends_on:
       - web
+    volumes:
+      - ./media_root:/app/media_root
 
   # 本地媒体文件 Nginx 服务
   nginx_media_server:
@@ -79,16 +90,21 @@ services:
       # 挂载 Nginx 配置文件
       - ./configs/nginx/vss-media-server.conf:/etc/nginx/conf.d/default.conf:ro
       # 将主机上收集到的静态文件目录挂载到 Nginx 容器中
-      - ./staticfiles:/var/www/staticfiles:ro
+      - staticfiles_volume:/var/www/staticfiles:ro
       # 将本地 media_root 目录挂载到 Nginx 的网站根目录，实现文件伺服
       - ./media_root:/var/www/media_root:ro
 
   # 第一层标注前端应用
   subeditor:
-    image: ghcr.io/weizhangcs/vss-subeditor:v1.0.0
+    # 如果在国内的云环境或本地网进行测试部署，需要通过加速器
+    image: tehgflpcjgsel0-ghcr.xuanyuan.run/weizhangcs/vss-subeditor:v1.0.2
+    # 如果在国外的云环境
+    # image: ghcr.io/weizhangcs/vss-subeditor:v1.0.0
     container_name: vss-subeditor
     ports:
       - "3000:3000"
+    env_file:
+      - .env
 
   # 第二/三层标注工具
   label-studio:
@@ -119,3 +135,4 @@ services:
 volumes:
   postgres_data:
   label_studio_data:
+  staticfiles_volume:
