1. 修复了在docker-compose.build.xml中，对subeditor的地址引用错误 2. 修复了在init_setup.sh中 DJANgo_SUPERUSER_PASSWORD的笔误 3. 在settings中增加了logging的配置项，以及对static静态文件的读取增加了本地nginx的地址前缀 4. 在vss-media-server.conf中因为settings的更改，添加了CORS支持

--- a/configs/nginx/vss-media-server.conf
+++ b/configs/nginx/vss-media-server.conf
@@ -26,8 +26,21 @@ server {
     # 新增 Location 块，用于处理静态文件请求
     location /static/ {
         alias /var/www/staticfiles/;
+
+        # --- 缓存控制指令 (保留) ---
         expires 1d;
         add_header Cache-Control "public";
+
+        # --- 新增的CORS跨域指令 ---
+        # 允许来自您Django应用源的请求
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept' always;
+
+        # 处理CORS预检请求
+        if ($request_method = 'OPTIONS') {
+            return 204;
+        }
     }
 
     # 定义一个 location 块来处理所有以 /media/ 开头的 URL 请求
