重大结构改变： 1. 将按照类属性划分的子包结构改为按照功能模块划分的，现在形成了 annotation, transcoding, delivery 三个清晰的独立子包 2. 功能解耦：实现了“转码”->“分发”的清晰流程。 3. 功能增强：为“标注”工作流增加了使用 CDN 加速的选项。

--- a/docker-compose.base.yml
+++ b/docker-compose.base.yml
@@ -92,6 +92,7 @@ services:
       - DJANGO_SESSION_COOKIE_SECURE=False
       - DJANGO_CSRF_COOKIE_SECURE=False
       - CSRF_TRUSTED_ORIGINS=${LABEL_STUDIO_PUBLIC_URL}
+      - CSP_CONNECT_SRC='self' https://cdn.vriworks.app
 
 volumes:
   postgres_data:
