BUG修复： * CSP_CONNECT_SRC='self' https://${AWS_S3_CUSTOM_DOMAIN} 避免硬编码 * PIP_MIRROR_URL=https://mirrors.aliyun.com/pypi/simple/ 本地开发的时候，依赖源（APT/PIP）都统一成阿里云 * annotation.views 又一个引用的改动

--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -23,7 +23,7 @@ services:
       context: .
       args:
         - APT_MIRROR=mirrors.aliyun.com
-        - PIP_MIRROR_URL=https://pypi.tuna.tsinghua.edu.cn/simple
+        - PIP_MIRROR_URL=https://mirrors.aliyun.com/pypi/simple/
     volumes:
       - .:/app
 
