--- a/.env.template
+++ b/.env.template
@@ -53,3 +53,8 @@ LABEL_STUDIO_INTERNAL_URL=http://label-studio:8080
 DJANGO_SUPERUSER_EMAIL=
 # IMPORTANT: The password will be prompted for securely when running the init script.
 DJANGO_SUPERUSER_PASSWORD=
+
+# --- Visify Story Studio Cloud API Settings ---
+CLOUD_API_BASE_URL=http://35.180.253.185:8000
+CLOUD_INSTANCE_ID=69d5f76e-2f04-41e2-9171-941c872493f1
+CLOUD_API_KEY=ca84e3b5-2eea-4afe-b810-78c48195f0ff
