重要更新说明：
在创作流中增加了视频合成的步骤

--- a/.env.template
+++ b/.env.template
@@ -55,6 +55,6 @@ DJANGO_SUPERUSER_EMAIL=
 DJANGO_SUPERUSER_PASSWORD=
 
 # --- Visify Story Studio Cloud API Settings ---
-CLOUD_API_BASE_URL=http://35.180.253.185:8000
-CLOUD_INSTANCE_ID=69d5f76e-2f04-41e2-9171-941c872493f1
-CLOUD_API_KEY=ca84e3b5-2eea-4afe-b810-78c48195f0ff
+CLOUD_API_BASE_URL=
+CLOUD_INSTANCE_ID=
+CLOUD_API_KEY=
