--- a/docker-compose.base.yml
+++ b/docker-compose.base.yml
@@ -16,6 +16,8 @@ services:
       timeout: 5s
     env_file:
       - .env
+    environment: # <-- 新增：设置时区
+      - TZ=Asia/Shanghai
 
   redis:
     image: redis:7-alpine
@@ -29,6 +31,8 @@ services:
       timeout: 3s
     expose:
       - "6379"
+    environment: # <-- 新增：设置时区
+      - TZ=Asia/Shanghai
 
   web:
     container_name: vss-web
@@ -43,6 +47,8 @@ services:
     volumes:
       - ./media_root:/app/media_root
       - staticfiles_volume:/app/staticfiles
+    environment: # <-- 新增：设置时区
+      - TZ=Asia/Shanghai
 
   celery_worker:
     container_name: vss-celery-worker
@@ -53,6 +59,8 @@ services:
       - web
     volumes:
       - ./media_root:/app/media_root
+    environment: # <-- 新增：设置时区
+      - TZ=Asia/Shanghai
 
   nginx_media_server:
     image: nginx:1.25-alpine
@@ -60,9 +68,11 @@ services:
     ports:
       - "9999:80"
     volumes:
-      - ./configs/nginx/vss-media-server.conf:/etc/nginx/conf.d/default.conf:ro
+      #- ./configs/nginx/vss-media-server.conf:/etc/nginx/conf.d/default.conf:ro
       - staticfiles_volume:/var/www/staticfiles:ro
       - ./media_root:/var/www/media_root:ro
+    environment: # <-- 新增：设置时区
+      - TZ=Asia/Shanghai
 
   subeditor:
     container_name: vss-subeditor
@@ -70,6 +80,8 @@ services:
       - "3000:3000"
     env_file:
       - .env
+    environment: # <-- 新增：设置时区
+      - TZ=Asia/Shanghai
 
   label-studio:
     image: heartexlabs/label-studio:latest
@@ -78,8 +90,8 @@ services:
       - "8081:8080"
     volumes:
       - label_studio_data:/label-studio/data
-      - ./configs/nginx/nginx-ls.conf:/etc/nginx/nginx.conf:ro
-    environment:
+      #- ./configs/nginx/nginx-ls.conf:/etc/nginx/nginx.conf:ro
+    environment: # <-- 修改：合并和追加时区设置
       - LABEL_STUDIO_ALLOW_LEGACY_TOKEN_AUTH=true
       - LABEL_STUDIO_HOST=${LABEL_STUDIO_PUBLIC_URL}
       - NGINX_PROXY_PASS_AUTHORIZATION=true
@@ -93,6 +105,7 @@ services:
       - DJANGO_CSRF_COOKIE_SECURE=False
       - CSRF_TRUSTED_ORIGINS=${LABEL_STUDIO_PUBLIC_URL}
       - CSP_CONNECT_SRC='self' https://${AWS_S3_CUSTOM_DOMAIN}
+      - TZ=Asia/Shanghai # <-- 新增：设置时区
 
 volumes:
   postgres_data:
