修改了label-studio的对接逻辑
目前在初始化安装的过程中 不再需要中断去配置 label-studio(创建同名用户，配置legacy token）， init.sh 可以一键完成初始化安装

--- a/.env.template
+++ b/.env.template
@@ -19,9 +19,8 @@ DJANGO_SUPERUSER_EMAIL=
 # 对应的密码：
 DJANGO_SUPERUSER_PASSWORD=
 
-
 # --- A.3 外部服务认证 (EXTERNAL SERVICE AUTH) ---
-# 1. Label Studio Token (从 LS UI 获取)
+# 1. Label Studio Token (从Setup_instance中自动获取)
 LABEL_STUDIO_ACCESS_TOKEN=
 
 # ----------------------------------------------------------------------------------
@@ -49,7 +48,7 @@ CELERY_BROKER_URL=redis://redis:6379/0
 LABEL_STUDIO_INTERNAL_URL=http://label-studio:8080
 
 # 跨域白名单（通常由 init_setup.sh 自动从 SUBEDITOR_PUBLIC_URL 生成）
-CORS_ALLOWED_ORIGINS=
+CORS_ALLOWED_ORIGINS=${SUBEDITOR_PUBLIC_URL}
 
 # --- B.3 派生公共 URL (DERIVED PUBLIC URLS) ---
 # 这些值由 init_setup.sh 脚本根据 PUBLIC_ENDPOINT 自动生成/覆盖
