--- a/docker-compose.base.yml
+++ b/docker-compose.base.yml
@@ -68,7 +68,7 @@ services:
     ports:
       - "9999:80"
     volumes:
-      #- ./configs/nginx/vss-media-server.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./configs/nginx/vss-media-server.conf:/etc/nginx/conf.d/default.conf:ro
       - staticfiles_volume:/var/www/staticfiles:ro
       - ./media_root:/var/www/media_root:ro
     environment: # <-- 新增：设置时区
@@ -90,9 +90,10 @@ services:
       - "8081:8080"
     volumes:
       - label_studio_data:/label-studio/data
-      #- ./configs/nginx/nginx-ls.conf:/etc/nginx/nginx.conf:ro
+      - ./configs/nginx/nginx-ls.conf:/etc/nginx/nginx.conf:ro
+    command: label-studio start --username ${DJANGO_SUPERUSER_EMAIL} --password ${DJANGO_SUPERUSER_PASSWORD}
     environment: # <-- 修改：合并和追加时区设置
-      - LABEL_STUDIO_ALLOW_LEGACY_TOKEN_AUTH=true
+      - LABEL_STUDIO_ENABLE_LEGACY_API_TOKEN=true
       - LABEL_STUDIO_HOST=${LABEL_STUDIO_PUBLIC_URL}
       - NGINX_PROXY_PASS_AUTHORIZATION=true
       - LABEL_STUDIO_SIGNUP_WITHOUT_INVITE=true
