--- a/configs/nginx/vss-media-server.conf
+++ b/configs/nginx/vss-media-server.conf
@@ -47,10 +47,21 @@ server {
     location /media/ {
         alias /var/www/media_root/;
 
-        # 允许所有来源的跨域请求
+        # --- 关键修复开始 ---
+        # 必须关闭 gzip！否则 Nginx 会尝试压缩视频，导致无法使用 206 分片传输，
+        # 从而迫使浏览器下载完整文件，导致大文件加载崩溃。
+        gzip off;
+
+        # 强制 Nginx 发送断点续传支持头 (虽然 alias 默认开启，但加上保险)
+        add_header Accept-Ranges bytes;
+        # --- 关键修复结束 ---
+
+        # 允许所有来源的跨域请求 (保留原配置)
         add_header 'Access-Control-Allow-Origin' '*' always;
         add_header 'Access-Control-Allow-Methods' 'GET, HEAD, OPTIONS' always;
         add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
+
+        # 确保浏览器能读取到分片信息的头 (保留原配置)
         add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
 
         if ($request_method = 'OPTIONS') {
@@ -58,6 +69,7 @@ server {
         }
 
         expires 1d;
+        # 注意：这里只保留一个 add_header Cache-Control，避免重复
         add_header Cache-Control "public";
     }
 }
