--- a/docker-compose.base.yml
+++ b/docker-compose.base.yml
@@ -3,7 +3,7 @@
 
 services:
   db:
-    image: crpi-34v4qt829vtet2cy.cn-hangzhou.personal.cr.aliyuncs.com/vss_base/postgres:16
+    image: crpi-34v4qt829vtet2cy.cn-hangzhou.personal.cr.aliyuncs.com/vss_base/postgres:16-alpine
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     restart: unless-stopped
