feat(workflow): 重构为“导演驾驶舱”模式，移除旧工厂与Tab页逻辑
本次提交对 Creative Workflow 进行了架构级重构，确立了“单管道精细化生产 (Director Mode)”的核心地位，废除了旧的批量工厂 (LoadRunner) 和分步 Tab 模式。

主要变更如下：

1. 核心架构 (Architecture):
   - **单一面相 (Single Facade)**: `CreativeProject` 详情页重构为“配置 (Config)”与“监视 (Monitor)”双视图，移除所有分步 Tab。
   - **模型重构**: 将 `projects.py` 重命名回归为 `models.py`；移除 `CreativeBatch` 模型逻辑；为 `CreativeProject` 增加 `project_type` 字段。

2. 后端编排 (Orchestrator):
   - 升级为 V2 协议：支持 `LOCKED` (资产复用)、`SKIP` (跳过)、`NEW` (新建) 意图识别。
   - 实现 `create_pipeline_from_strategy`: 针对单管道优化，移除批量循环，实现任务链的自动阻断与级联触发。
   - 修复 Asset 字段缺失导致的创建失败问题。

3. 前端交互 (Frontend - Director):
   - 新建 `js/director/`：基于 React 实现强制单选 (Single Choice) 的配置界面。
   - 修复作用域污染：为 Config/Utils 引入 IIFE 封装，解决全局变量冲突。
   - 实现 V2 Payload 构建：自动根据本地化语言 (Target Lang) 推断配音语言代码 (Language Code)。

4. 监视器 (Monitor UI):
   - 实现实时进度条与状态自动刷新 (轮询机制)。
   - 实现解说词双语/单语自适应展示。
   - 修复音频列表解析逻辑：不再依赖 Job 状态，直接读取 `dubbing_script.json` 中的 `local_audio_path`，解决路径 404 问题。
   - UI 优化：隐藏 Admin 默认的保存按钮组，仅保留删除功能。

5. 路由与接口 (Views/URLs):
   - 清理所有旧版 `trigger_xxx` 和 `loadrunner` 路由。
   - 新增 `pipeline/submit` 接口，支持任务启动后智能跳转至监视器页面。

涉及文件:
- apps/workflow/creative/admin.py
- apps/workflow/creative/models.py (原 projects.py)
- apps/workflow/creative/services/orchestrator.py
- apps/workflow/creative/views.py
- apps/workflow/creative/urls.py
- apps/workflow/static/creative/js/director/*
- templates/admin/workflow/project/creative/monitor.html
- templates/admin/workflow/project/creative/director_tab.html

待办事项 (TODO) - 下次启动时的任务清单
[High Priority] 统一产出物路径与文件结构

当前 actions.py (下载逻辑) 与 synthesis_service.py (合成逻辑) 对文件路径的处理存在不一致，导致目录结构混乱 (creative/ vs creative_synthesis/ vs tmp/)。

目标 1：统一存储结构
所有产出物应归归档至 media_root/creative/{project_id}/ 下。

子目录规范化：
/narration/ (解说词 json)
/audio/ (配音 mp3 & 脚本 json)
/visual/ (剪辑脚本 & 中间视频)
/output/ (最终成片)

目标 2：修复 dubbing_script 路径回写
检查 actions.py 中的下载逻辑，确保从 Cloud 下载音频后，回写到 JSON 里的 local_audio_path 是相对于 MEDIA_ROOT 的干净相对路径。
确保 admin.py 和 synthesis_service.py 读取时使用统一的路径拼接逻辑。

目标 3：

--- a/docker-compose.base.yml
+++ b/docker-compose.base.yml
@@ -48,7 +48,7 @@ services:
     environment: # <-- 新增：设置时区
       - TZ=Asia/Shanghai
 
-  celery_worker:
+  worker:
     command: celery -A visify_ssw worker -l info --concurrency=1
     user: root
     env_file:
