--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -7,7 +7,7 @@ services:
     image: crpi-34v4qt829vtet2cy.cn-hangzhou.personal.cr.aliyuncs.com/vss_edge/workbench:v1.2.0-alpha.1 # Define the tag for the built image
     restart: always
 
-  celery_worker:
+  worker:
     image: crpi-34v4qt829vtet2cy.cn-hangzhou.personal.cr.aliyuncs.com/vss_edge/workbench:v1.2.0-alpha.1 # Use the same tag
     restart: always
 
