feat(infra): 重构边缘端架构以支持健壮的本地部署
针对本地/局域网环境的稳定性，对部署逻辑、存储架构及后台交互进行了深度重构。

[部署与环境]
- 升级 `init.sh` 至 V10：基于单一 PUBLIC_ENDPOINT 自动推导所有服务的 URL 和端口。
- 配置解耦：清除 `.env.template` 中的动态 Shell 变量逻辑，保证模板纯净。
- 端口调整：将 Subeditor 默认端口改为 8082，避免 Windows/WSL 下 3000 端口冲突。
- 安全配置：在初始化脚本中自动计算并生成 `CORS_ALLOWED_ORIGINS`。

[存储与媒资架构]
- 引入 `EdgeLocalStorage`：全局自定义存储后端，强制所有 FileField 生成指向 Nginx (9999) 的绝对路径。
- 重构 `Media` 模型：移除冗余且易歧义的 `processed_video_url` 和 `source_subtitle_url` 字段。
- 新增 `Media.get_best_playback_url()`：将代理视频与源视频的回退查找逻辑下沉至 Model 层。
- 修复 `TranscodingJob`：修正存储服务中 `output_url` 路径拼接缺失 asset_id 的 Bug。

[代码库重构]
- 简化 `annotation/views.py`：移除视图层的手动 URL 拼接，全面转为调用 Model 逻辑及依赖存储后端。
- 更新 `media_assets/admin.py`：清理对已废弃字段的引用，修复 Admin 报错。
- 修复 Subeditor 集成：确保 API 传递给前端的均为绝对路径，解决 Vue Router 劫持导致的 404 问题。

[UI/UX 优化]
- 优化 `AnnotationProject` Admin：在修改页面隐藏易误导的“保存”系列按钮。
- 布局改进：通过注入 CSS (`factory.css`) 强制将“删除”按钮移动至右下角，符合操作直觉。

[数据库]
- 应用 Migrations：清理 Media 表结构。

--- a/configs/nginx/vss-media-server.conf
+++ b/configs/nginx/vss-media-server.conf
@@ -1,75 +1,80 @@
 # 文件路径: configs/nginx/vss-media-server.conf
+# VSS Edge Media Server - Production Optimized V2
 
 server {
-    # Nginx 在容器内部监听 80 端口
     listen 80;
+    server_name localhost;
 
-    # 【新增】为 annotation 产出物单独创建一个 location 块
-    # Nginx 会优先匹配这个更具体的路径
+    # --- [全局核心优化] ---
+    # 允许上传的最大文件大小 (针对 batch_uploads)
+    # 设置为 0 表示不限制，或者设置为具体值如 20G
+    client_max_body_size 20G;
+
+    # 开启零拷贝：极大降低大文件发送时的 CPU 消耗
+    sendfile on;
+    # 减少网络报文数量
+    tcp_nopush on;
+    # 禁用 Nagle 算法，降低延迟 (对视频拖拽至关重要)
+    tcp_nodelay on;
+    # 保持长连接
+    keepalive_timeout 65;
+
+    # --- [1. 标注产物 (Annotation Media)] ---
+    # 特性: 频繁修改的 JSON/ASS 文件
+    # 策略: 禁用强缓存，强制验证
     location /media/annotation/ {
         alias /var/www/media_root/annotation/;
 
-        # 允许所有来源的跨域请求
+        # 允许跨域 (Label Studio/Subeditor 需要)
         add_header 'Access-Control-Allow-Origin' '*' always;
         add_header 'Access-Control-Allow-Methods' 'GET, HEAD, OPTIONS' always;
         add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
-        add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
 
-        if ($request_method = 'OPTIONS') {
-            return 204;
-        }
+        if ($request_method = 'OPTIONS') { return 204; }
 
-        expires 1d;
-        add_header Cache-Control "public";
+        # [关键修正] 禁用缓存！防止标注数据更新后前端不刷新
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+        expires -1;
     }
 
-    # 新增 Location 块，用于处理静态文件请求
+    # --- [2. 静态资源 (Static Files)] ---
+    # 特性: Django 系统资源，部署后基本不变
     location /static/ {
         alias /var/www/staticfiles/;
 
-        # --- 缓存控制指令 (保留) ---
-        expires 1d;
+        # 激进缓存 30天
+        expires 30d;
         add_header Cache-Control "public";
 
-        # --- 新增的CORS跨域指令 ---
-        # 允许来自您Django应用源的请求
-        add_header 'Access-Control-Allow-Origin' '*' always;
-        add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
-        add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept' always;
+        # 关闭日志，减少磁盘 IO
+        access_log off;
 
-        # 处理CORS预检请求
-        if ($request_method = 'OPTIONS') {
-            return 204;
-        }
+        add_header 'Access-Control-Allow-Origin' '*' always;
     }
 
-    # 定义一个 location 块来处理所有以 /media/ 开头的 URL 请求
+    # --- [3. 视频媒资 (Video Assets)] ---
+    # 覆盖: batch_uploads, source_files, transcoding_outputs, creative
+    # 特性: 大文件，写入后基本不修改，需要高效分发
     location /media/ {
         alias /var/www/media_root/;
 
-        # --- 关键修复开始 ---
-        # 必须关闭 gzip！否则 Nginx 会尝试压缩视频，导致无法使用 206 分片传输，
-        # 从而迫使浏览器下载完整文件，导致大文件加载崩溃。
+        # [核心] 视频严禁 Gzip，否则无法分片传输
         gzip off;
 
-        # 强制 Nginx 发送断点续传支持头 (虽然 alias 默认开启，但加上保险)
+        # [核心] 强制支持断点续传/范围请求 (支持视频拖拽)
         add_header Accept-Ranges bytes;
-        # --- 关键修复结束 ---
 
-        # 允许所有来源的跨域请求 (保留原配置)
+        # 视频文件设置最大缓存
+        expires max;
+        add_header Cache-Control "public, no-transform";
+
+        # 跨域设置
         add_header 'Access-Control-Allow-Origin' '*' always;
         add_header 'Access-Control-Allow-Methods' 'GET, HEAD, OPTIONS' always;
         add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
-
-        # 确保浏览器能读取到分片信息的头 (保留原配置)
+        # 暴露 Content-Range 头给播放器
         add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
 
-        if ($request_method = 'OPTIONS') {
-            return 204;
-        }
-
-        expires 1d;
-        # 注意：这里只保留一个 add_header Cache-Control，避免重复
-        add_header Cache-Control "public";
+        if ($request_method = 'OPTIONS') { return 204; }
     }
 }
