fix(infra): Label Studio 生产级配置加固与资源解耦
针对 Label Studio 的稳定性与部署流程进行了全面升级，并优化了模块间的依赖关系。

[基础设施]
- 更新 `docker-compose.base.yml`：
  - 数据库迁移：将 Label Studio 存储后端从 SQLite 切换至 PostgreSQL，解决高并发下的数据库锁死问题。
  - 安全增强：添加 `CSP_FRAME_SRC` 策略，修复官方新闻/版本检查页面的 iframe 嵌入报错。
  - 配置清洗：移除无效参数（如 Nginx Proxy Auth），统一时区配置。
- 升级 `init.sh`：
  - 增加 `label_studio` 数据库自动创建逻辑，实现从 DB 初始化到服务启动的闭环部署。
  - 修复服务名拼写错误（label_studio -> label-studio），确保 API Token 自动获取逻辑正常执行。

[架构重构]
- 迁移 `video.xml`：将 Label Studio 模板文件从 `media_assets` 移至 `workflow` 应用目录，消除跨应用的隐式依赖。

--- a/docker-compose.base.yml
+++ b/docker-compose.base.yml
@@ -86,25 +86,44 @@ services:
     ports:
       - "8081:8080"
     volumes:
+      # 数据卷保留，用于存储上传的头像等文件 (项目数据将存入 Postgres)
       - label_studio_data:/label-studio/data
-      #- ./configs/nginx/nginx-ls.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - db
+      - redis
+    # 启动命令保持不变
     command: label-studio start --username ${DJANGO_SUPERUSER_EMAIL} --password ${DJANGO_SUPERUSER_PASSWORD}
-    environment: # <-- 修改：合并和追加时区设置
-      - LABEL_STUDIO_ENABLE_LEGACY_API_TOKEN=true
+    environment:
+      # --- 基础网络配置 ---
       - LABEL_STUDIO_HOST=${LABEL_STUDIO_PUBLIC_URL}
       - DJANGO_ALLOWED_HOSTS=*
-      - NGINX_PROXY_PASS_AUTHORIZATION=true
-      - LABEL_STUDIO_SIGNUP_WITHOUT_INVITE=true
+      - TZ=Asia/Shanghai
+
+      # --- [保留] 遗留Token支持 (init.sh 脚本依赖此项获取 Token) ---
+      - LABEL_STUDIO_ENABLE_LEGACY_API_TOKEN=true
+
+      # --- [变更 2] 数据库生产级配置 (切换至 Postgres) ---
+      - DJANGO_DB=default
+      - POSTGRE_NAME=label_studio
+      - POSTGRE_USER=${POSTGRES_USER}
+      - POSTGRE_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRE_HOST=db
+      - POSTGRE_PORT=5432
+
+      # --- [保留] Redis 缓存与 Session (高性能必备) ---
       - DJANGO_SESSION_ENGINE=django.contrib.sessions.backends.cache
       - LABEL_STUDIO_CACHE_BACKEND=django_redis.cache.RedisCache
       - REDIS_LOCATION=redis://redis:6379/1
+      # 安全 Cookie 策略 (根据您的 .env 动态加载)
       - DJANGO_SESSION_COOKIE_SAMESITE=Lax
       - DJANGO_SESSION_COOKIE_SECURE=False
       - DJANGO_CSRF_COOKIE_SAMESITE=Lax
       - DJANGO_CSRF_COOKIE_SECURE=False
       - CSRF_TRUSTED_ORIGINS=${LABEL_STUDIO_PUBLIC_URL}
+
+      # --- 资源加载策略 ---
       - CSP_CONNECT_SRC='self' ${LOCAL_MEDIA_URL_BASE}
-      - TZ=Asia/Shanghai # <-- 新增：设置时区
+      - CSP_FRAME_SRC='self' https://labelstud.io
 
 volumes:
   postgres_data:
