refactor(workflow): 重构项目导入机制与UI，修复URL拼接及排序Bug
主要变更：

1. 重构导入机制 (Portable Service)
   - 修改 import_annotation_project 逻辑，导入时不再直接复制蓝图 (Blueprint) 和矩阵 (Metrics) 等衍生文件，避免旧数据逻辑断层。
   - 引入 Celery 任务链 (Chain)，在基础数据恢复后自动触发 "导出L2 -> 生成蓝图 -> 计算矩阵" 的全链路重建，确保数据的一致性与时效性。

2. UI/UX 升级 (Annotation Import)
   - 重写 import_form.html，移除旧版原生表单，采用 React + Ant Design 实现现代化交互。
   - 统一界面视觉风格：适配 Unfold 主题的紫色系 (Purple/Violet) 配色，采用白色扁平化卡片布局。
   - 优化交互反馈：增加文件上传拦截、表单提交 Loading 状态及防重复点击机制。
   - 解决 Django 模板标签与 React JSX 语法的解析冲突。

3. Bug 修复
   - Fix(views): 修复 SubEditor 启动视图逻辑，强制将本地字幕文件的相对路径转换为带域名的绝对 URL，解决导入项目后字幕无法加载的问题。
   - Fix(Modeler): 修复 ScriptModeler 在处理 timeline_marker 时因字段缺失导致的 NoneType 排序异常，增加了默认值防御。

4. 其他
   - 验证了创建 LS 项目时的并发防御逻辑 (Signal vs Sync) 有效性。
   - 在config.js中添加了中文的选择

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -4,13 +4,13 @@
 
 services:
   web:
-    image: crpi-34v4qt829vtet2cy.cn-hangzhou.personal.cr.aliyuncs.com/vss_edge/workbench:v1.2.0-alpha.1 # Define the tag for the built image
+    image: crpi-34v4qt829vtet2cy.cn-hangzhou.personal.cr.aliyuncs.com/vss_edge/workbench:v1.2.0-alpha.4.fix # Define the tag for the built image
     restart: always
 
   worker:
-    image: crpi-34v4qt829vtet2cy.cn-hangzhou.personal.cr.aliyuncs.com/vss_edge/workbench:v1.2.0-alpha.1 # Use the same tag
+    image: crpi-34v4qt829vtet2cy.cn-hangzhou.personal.cr.aliyuncs.com/vss_edge/workbench:v1.2.0-alpha.4.fix # Use the same tag
     restart: always
 
   subeditor:
-    image: crpi-34v4qt829vtet2cy.cn-hangzhou.personal.cr.aliyuncs.com/vss_edge/subeditor:latest # 目前subeditor并没有进行镜像版本管理
+    image: crpi-34v4qt829vtet2cy.cn-hangzhou.personal.cr.aliyuncs.com/vss_edge/subeditor:v1.2.0-alpha.4 # 目前subeditor并没有进行镜像版本管理
     restart: always
