--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,13 +13,21 @@
   "description": "",
   "dependencies": {
     "@ant-design/icons": "^6.1.0",
+    "@cloudgpt/timeline-editor": "^1.0.0",
     "antd": "^6.0.1",
     "dayjs": "^1.11.19",
+    "lodash": "^4.17.21",
     "react": "^19.2.1",
-    "react-dom": "^19.2.1"
+    "react-dom": "^19.2.1",
+    "react-player": "^3.4.0",
+    "wavesurfer-react": "^3.0.4",
+    "wavesurfer.js": "^7.12.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^5.1.1",
+    "autoprefixer": "^10.4.22",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
     "vite": "^7.2.6"
   }
 }
